--- a/app/src/main/res/layout/ac_sample_linear.xml
+++ b/app/src/main/res/layout/ac_sample_linear.xml
@@ -21,7 +21,7 @@
             android:layout_marginBottom="40dp"
             android:orientation="horizontal">
 
-            <com.mikhaellopez.circularprogressbar.CircularProgressBar
+            <interval.com.intervalapp.activity.CircularProgressBar
                 android:id="@+id/circuralProgress"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
