--- a/app/src/main/res/layout/mode_layout.xml
+++ b/app/src/main/res/layout/mode_layout.xml
@@ -19,6 +19,19 @@
         android:textColor="@color/white"
         android:textSize="30sp" />
 
+    <Button
+        android:id="@+id/check_permission"
+        android:layout_width="match_parent"
+        android:layout_centerInParent="true"
+        android:layout_height="wrap_content"
+        android:text="Check Permission"/>
+    <Button
+        android:id="@+id/request_permission"
+        android:layout_below="@+id/check_permission"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Request Permission"/>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
