--- a/app/src/main/res/layout/reset_password_activity.xml
+++ b/app/src/main/res/layout/reset_password_activity.xml
@@ -54,7 +54,7 @@
         </android.support.design.widget.TextInputLayout>
         <!-- Login Button -->
         <Button
-            android:id="@+id/btn_reset_password"
+            android:id="@+id/reset_password_button"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dip"
@@ -62,7 +62,7 @@
             android:text="@string/btn_reset_password"
             android:textColor="@android:color/black" />
         <Button
-            android:id="@+id/btn_back"
+            android:id="@+id/back_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -71,7 +71,7 @@
             android:textColor="@color/colorAccent" />
     </LinearLayout>
     <ProgressBar
-        android:id="@+id/progressBar"
+        android:id="@+id/progress_bar"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_gravity="center|bottom"
