--- a/app/src/main/res/layout/reset_password_helper.xml
+++ b/app/src/main/res/layout/reset_password_helper.xml
@@ -108,7 +108,7 @@
             android:textStyle="bold" />
 
         <ProgressBar
-            android:id="@+id/progressBar"
+            android:id="@+id/progress_bar"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:visibility="gone" />
