--- a/app/src/main/res/layout/tryb_low.xml
+++ b/app/src/main/res/layout/tryb_low.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical">
 
     <android.support.v7.widget.AppCompatButton
-        android:id="@+id/row"
+        android:id="@+id/row_button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
