--- a/app/src/main/res/layout/create_mode_layout.xml
+++ b/app/src/main/res/layout/create_mode_layout.xml
@@ -142,5 +142,19 @@
             </LinearLayout>
 
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <org.eazegraph.lib.charts.PieChart
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/piechart"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:padding="8dp"
+                app:egLegendTextSize="18sp"
+                app:egUsePieRotation="true"
+                app:egValueTextSize="36sp"/>
+
+        </LinearLayout>
     </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
