--- a/app/src/main/res/layout/ac_sample_linear.xml
+++ b/app/src/main/res/layout/ac_sample_linear.xml
@@ -28,7 +28,7 @@
                 android:layout_centerInParent="true"
                 app:cpb_background_progressbar_color="@color/colorPrimary"
                 app:cpb_background_progressbar_width="5dp"
-                app:cpb_progressbar_color="@color/start"
+                app:cpb_progressbar_color="@color/low_intensity"
                 app:cpb_progressbar_width="10dp" />
 
             <LinearLayout
@@ -46,7 +46,7 @@
                     android:layout_weight="1"
                     android:clickable="true"
                     android:src="@drawable/play"
-                    app:backgroundTint="@color/start"
+                    app:backgroundTint="@color/low_intensity"
                     app:fabSize="normal" />
 
                 <LinearLayout
