--- a/app/src/main/res/layout/create_mode_layout.xml
+++ b/app/src/main/res/layout/create_mode_layout.xml
@@ -1,26 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/add_mode_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/plus"
-        app:backgroundTint="@color/white"
-        app:fabSize="normal"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:background="@color/colorPrimaryDark"
         android:orientation="vertical"
         android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -29,7 +16,6 @@
         tools:layout_editor_absoluteY="8dp">
 
         <TextView
-            android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
@@ -38,14 +24,14 @@
             android:textSize="25sp" />
 
         <android.support.design.widget.TextInputLayout
-            android:layout_width="381dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:theme="@style/FilterInputLayout"
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="0dp">
 
             <EditText
-                android:id="@+id/mode_name"
+                android:id="@+id/mode_name_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/mode_name"
@@ -61,100 +47,103 @@
             tools:layout_editor_absoluteY="0dp">
 
             <EditText
-                android:id="@+id/description"
-                android:layout_width="362dp"
+                android:id="@+id/description_edit_text"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/description"
                 android:inputType="textEmailAddress"
                 android:textColor="@color/white" />
         </android.support.design.widget.TextInputLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/runLeveltextView"
-                    android:layout_width="100dp"
-                    android:layout_height="40dp"
-                    android:gravity="center"
-                    android:text="mode level:"
-                    android:textColor="@color/white"
-                    android:textSize="16sp" />
-
-                <it.beppi.tristatetogglebutton_library.TriStateToggleButton
-                    android:id="@+id/intensityButton"
-                    android:layout_width="100dp"
-                    android:layout_height="40dp"
-                    android:layout_gravity="center"
-                    android:layout_marginBottom="20dp"
-                    android:layout_marginTop="20dp"
-                    app:layout_constraintVertical_bias="0.342"
-                    app:tbMidColor="@color/pause"
-                    app:tbOffColor="@color/stop"
-                    app:tbOnColor="@color/start" />
-
-                <TextView
-                    android:id="@+id/intensityTextView"
-                    android:layout_width="100dp"
-                    android:layout_height="40dp"
-                    android:layout_marginBottom="20dp"
-                    android:layout_marginTop="20dp" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-                <Button
-                    android:id="@+id/time_picker"
-                    android:layout_width="190dp"
-                    android:layout_height="48dp"
-                    android:layout_gravity="center"
-                    android:layout_marginRight="6dp"
-                    android:background="@drawable/my_button"
-                    android:text="@string/choose_time_of_mode"
-                    android:textColor="@color/white" />
-
-                <Button
-                    android:id="@+id/add_mode"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:background="@drawable/plus_box" />
-
-                <Button
-                    android:id="@+id/delete_mode"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:background="@drawable/minus_box" />
-
-            </LinearLayout>
-
-        </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <org.eazegraph.lib.charts.PieChart
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/piechart"
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:padding="8dp"
-                app:egLegendTextSize="18sp"
-                app:egUsePieRotation="true"
-                app:egValueTextSize="36sp"/>
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="100dp"
+                android:layout_height="40dp"
+                android:gravity="center"
+                android:text="@string/mode_level"
+                android:textColor="@color/white"
+                android:textSize="16sp" />
+
+            <it.beppi.tristatetogglebutton_library.TriStateToggleButton
+                android:id="@+id/tristate_intensity_button"
+                android:layout_width="100dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="20dp"
+                app:layout_constraintVertical_bias="0.342"
+                app:tbOffColor="@color/high_intensity"
+                app:tbMidColor="@color/medium_intensity"
+                app:tbOnColor="@color/low_intensity" />
+
+            <TextView
+                android:id="@+id/intensity_text_view"
+                android:layout_width="100dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="20dp" />
 
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:layout_marginBottom="@dimen/activity_vertical_margin">
+
+            <Button
+                android:id="@+id/intensity_duration_button"
+                android:layout_width="210dp"
+                android:layout_height="48dp"
+                android:layout_gravity="center"
+                android:layout_marginEnd="6dp"
+                android:background="@drawable/my_button"
+                android:text="@string/select_section_duration"
+                android:textColor="@color/white" />
+
+            <ImageView
+                android:id="@+id/add_mode_icon"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:background="@drawable/plus_box"
+                android:contentDescription="@string/plus" />
+
+            <ImageView
+                android:id="@+id/delete_mode_icon"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:background="@drawable/minus_box"
+                android:contentDescription="@string/minus" />
+
+        </LinearLayout>
+
+        <org.eazegraph.lib.charts.PieChart xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/pie_chart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            app:egLegendTextSize="18sp"
+            app:egUsePieRotation="true"
+            app:egValueTextSize="36sp" />
+
     </LinearLayout>
-</android.support.design.widget.CoordinatorLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/add_mode_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@drawable/plus"
+        app:backgroundTint="@color/white"
+        app:fabSize="normal" />
+
+</FrameLayout>
