--- a/app/src/main/res/layout/dialog.xml
+++ b/app/src/main/res/layout/dialog.xml
@@ -36,12 +36,12 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             app:integer_priority="true"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:max_value="250"
+            app:max_value="60"
             app:picker_corner_radius="20"
-            app:pickers_background_color="#8d8d8d"
-            app:value_background_color="#bdbdbd"
+            app:pickers_background_color="@color/dark_gray"
+            app:value_animation_down="true"
+            app:value_animation_up="true"
+            app:value_background_color="@color/light_gray"
             app:value_text_color="@android:color/white" />
 
 
@@ -62,13 +62,11 @@
             app:integer_priority="true"
             app:max_value="60"
             app:picker_corner_radius="20"
-            app:pickers_background_color="#8d8d8d"
-            app:step="1"
+            app:pickers_background_color="@color/dark_gray"
             app:value_animation_down="true"
             app:value_animation_up="true"
-            app:value_background_color="#bdbdbd"
-            app:value_text_color="@android:color/white"
-            app:value_view_offset="15" />
+            app:value_background_color="@color/light_gray"
+            app:value_text_color="@android:color/white" />
 
     </GridLayout>
 
