--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -39,8 +39,7 @@
             android:layout_height="38dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="24dp"
-            android:src="@drawable/run"
-            android:tint="@color/white" />
+            android:src="@drawable/runner_icon"/>
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
