--- a/app/src/main/res/layout/summary_activity.xml
+++ b/app/src/main/res/layout/summary_activity.xml
@@ -3,13 +3,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="interval.com.intervalapp.activity.SummaryActivity">
+    tools:context="interval.com.intervalapp.activity.SummaryActivity"
+    android:background="@drawable/back_legs"
+    android:adjustViewBounds="true"
+    android:scaleType="fitXY"
+    android:orientation="vertical">
 
     <TextView
-        android:layout_width="368dp"
-        android:layout_height="624dp"
-        android:text="GOOD BYE"
+        android:id="@+id/goodbye_text_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="350dp"
+        android:gravity="center"
+        android:text="@string/good_bye"
+        android:textColor="@color/white"
+        android:textSize="36sp"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="8dp" />
-
 </LinearLayout>
