--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,7 +15,7 @@
     <color name="high_intensity">#e0ff3e5d</color>
     <color name="dark_gray">#8d8d8d</color>
     <color name="light_gray">#bdbdbd</color>
-
+    <color name="darker_gray">#345953</color>
 
     <color name="black">#000000</color>
     <color name="jet">#222222</color>
