mipmaps and drawables separation

--- a/app/src/main/res/layout/selected_mode_activity.xml
+++ b/app/src/main/res/layout/selected_mode_activity.xml
@@ -16,7 +16,7 @@
             android:id="@+id/toolbar_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/fastrun"
+            android:background="@mipmap/runner_picture"
             android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
 
