--- a/app/src/main/res/drawable/background_blur_effect.xml
+++ b/app/src/main/res/drawable/background_blur_effect.xml
@@ -5,4 +5,4 @@
     android:layout_height="match_parent"
     android:alpha="0.5"
     android:shape="rectangle"
-    android:src="@drawable/back_legs" />
+    android:src="@mipmap/back_legs" />
