--- a/app/src/main/res/layout/ac_sample_linear.xml
+++ b/app/src/main/res/layout/ac_sample_linear.xml
@@ -22,7 +22,7 @@
             android:orientation="horizontal">
 
             <interval.com.intervalapp.activity.CircularProgressBar
-                android:id="@+id/circuralProgress"
+                android:id="@+id/circular_progress_bar"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
                 android:layout_centerInParent="true"
