--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -11,7 +11,7 @@
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/back_legs" />
+        android:src="@mipmap/back_legs" />
 
     <LinearLayout
         android:layout_width="match_parent"
