--- a/app/src/main/res/layout/new_account_activity.xml
+++ b/app/src/main/res/layout/new_account_activity.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/back_legs"
+    android:background="@mipmap/back_legs"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
     android:paddingLeft="24dp"
