--- a/app/src/main/res/layout/summary_activity.xml
+++ b/app/src/main/res/layout/summary_activity.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="interval.com.intervalapp.activity.SummaryActivity"
-    android:background="@drawable/back_legs"
+    android:background="@mipmap/back_legs"
     android:adjustViewBounds="true"
     android:scaleType="fitXY"
     android:orientation="vertical">
