--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,7 +8,7 @@
     <dimen name="fab_margin">20dp</dimen>
     <dimen name="app_bar_height">180dp</dimen>
     <dimen name="text_margin">16dp</dimen>
-    <dimen name="progressBarWidth">5dp</dimen>
-    <dimen name="backgroundProgressBarWidth">2dp</dimen>
+    <dimen name="progress_bar_width">5dp</dimen>
+    <dimen name="progress_bar_background_width">2dp</dimen>
     <dimen name="logo_w_h">100dp</dimen>
 </resources>
