--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -45,7 +45,7 @@
     </style>
 
     <style name="AppTheme.PopupOverlay">
-        <item name="android:background">@drawable/fastrun</item>
+        <item name="android:background">@mipmap/runner_picture</item>
         <item name="colorControlActivated">@color/white</item>
         <item name="colorControlHighlight">@color/white</item>
         <item name="android:textColorHint">@color/white</item>
