--- a/app/src/main/res/layout/running_activity.xml
+++ b/app/src/main/res/layout/running_activity.xml
@@ -33,6 +33,6 @@
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/ac_sample_linear" />
+    <include layout="@layout/running_management_layout" />
 
 </android.support.design.widget.CoordinatorLayout>
