--- a/app/src/main/res/layout/running_management_layout.xml
+++ b/app/src/main/res/layout/running_management_layout.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/selected_mode_activity">
+    tools:showIn="@layout/running_activity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,7 +21,7 @@
             android:layout_marginBottom="40dp"
             android:orientation="horizontal">
 
-            <interval.com.intervalapp.activity.CircularProgressBar
+            <interval.com.intervalapp.utils.CircularProgressBar
                 android:id="@+id/circular_progress_bar"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
@@ -41,7 +41,7 @@
                 <android.support.design.widget.FloatingActionButton
                     android:id="@+id/start_button"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
                     android:layout_marginBottom="20dp"
                     android:layout_weight="1"
                     android:clickable="true"
@@ -58,7 +58,7 @@
                         android:id="@+id/pause_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="15dp"
+                        android:layout_marginEnd="15dp"
                         android:layout_weight="1"
                         android:clickable="true"
                         android:src="@drawable/pause"
@@ -69,7 +69,7 @@
                         android:id="@+id/stop_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="15dp"
+                        android:layout_marginStart="15dp"
                         android:layout_weight="1"
                         android:clickable="true"
                         android:src="@drawable/stop"
@@ -85,37 +85,29 @@
             android:columnCount="2">
 
             <TextView
-                android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.28"
-                android:text="Timer"
+                android:text="@string/duration"
                 android:textColor="@color/white" />
 
             <TextView
-                android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.28"
-                android:text="Next interval in:"
+                android:text="@string/next_interval_in"
                 android:textColor="@color/white" />
 
             <Chronometer
                 android:id="@+id/chronometer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="15dp"
-                android:layout_weight="0.28"
-                android:text="Chronometer"
+                android:layout_marginEnd="15dp"
                 android:textColor="@color/white"
                 android:textSize="40sp" />
 
             <TextView
-                android:id="@+id/countdown_textView"
+                android:id="@+id/countdown_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.28"
-                android:text="WSTAW TIMER"
                 android:textColor="@color/white" />
 
         </GridLayout>
