--- a/app/src/main/res/layout/user_songlists_column_item.xml
+++ b/app/src/main/res/layout/user_songlists_column_item.xml
@@ -34,13 +34,12 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginRight="12dp"
-                android:src="@mipmap/ic_launcher" />
+                android:src="@drawable/note_icon" />
 
             <TextView
                 android:id="@+id/text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="test test test"
                 android:textSize="16sp" />
 
         </LinearLayout>
